quick fix for footer covering content

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,7 @@ a {
 	min-width: 750px;
     margin: auto;
 	background: none;
+	padding-bottom: 40px;
 }
 @media only screen and (max-width: 800px) {
     .root{
